# ops-system

./: .env.example  .gitignore  CLIENT_CONFIG.md  Cargo.toml  Dockerfile.client  Dockerfile.server  README.md  SCRIPT_SECURITY.md  TCP_AUTHENTICATION_IMPLEMENTATION.md  USER_MANUAL.md  client-config.toml  config.example.toml  cookies2.txt  debug-serialization.rs  debug-test.rs  debug-test.sh  docker-compose.yml  ops-client.log.2025-08-31  ops-client.log.2025-09-01  quick-script-test.sh  quick-test.sh  test-command-reception.sh  test-command-security.sh  test-deployment.md  test-message-format.rs  test-minimal.sh  test-run.sh  test-script-execution.sh  test_broadcast.sh  代码架构文档.md  优化建议.md  用户手册.md
ops-client/: Cargo.toml
ops-client/src/: main.rs  tests.rs
ops-client/src/collection/: app_info.rs  mod.rs  system_info.rs  version_collector.rs
ops-client/src/tcp_services/: client.rs
ops-common/: Cargo.toml
ops-common/src/: config.rs  lib.rs  security.rs  tcp_auth.rs
ops-server/: Cargo.toml
ops-server/src/: command_results.rs  main.rs  middleware.rs  shared_data_handle.rs  tests.rs
ops-server/src/tcp_services/: handle_socket.rs  mod.rs
ops-server/src/web/: handlers.rs  routes.rs
ops-server/static/: index.html
