[workspace]
members = ["ops-server", "ops-client", "ops-common"]
resolver = "2"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
socket2 = "0.6.0"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full", "io-util", "rt-multi-thread"] }
hostname = "0.4.1"
sysinfo = "0.36.0"
pnet_datalink = "0.35.0"