[package]
name = "ops-client"
version = "0.1.0"
edition = "2024"

[dependencies]
ops-common = { path = "../ops-common" }
serde = { workspace = true }
socket2 = { workspace = true }
serde_json = {workspace = true}
tokio = { workspace = true }
sysinfo = {workspace = true}
hostname = {workspace = true}
rand = "0.9.1"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
tracing-appender = "0.2"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
